cabal-version:      2.4
name:               bytestring-aeson-orphans
version:            0.1.0.0
synopsis:           Aeson instances for ByteString, using base 64 encoding
description:
  Encode ByteStrings as valid JSON using Aeson.  The instances provided by this
  package use base64 encoding to ensure that the ByteString does not contain
  invalid (for JSON) characters.

homepage:           https://github.com/obsidiansystems/bytestring-aeson-orphans
bug-reports:
  https://github.com/obsidiansystems/bytestring-aeson-orphans/issues

license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          (c) 2021 Obsidian Systems LLC
category:           Data
extra-source-files: CHANGELOG.md README.md

library
  hs-source-dirs: src

  build-depends:
      aeson
    , base
    , base64-bytestring
    , bytestring
    , text

  exposed-modules: ByteString.Aeson.Orphans

  ghc-options: -Wall -fno-warn-unused-do-bind -fwarn-tabs -funbox-strict-fields -O2 -fprof-auto-calls
